syntax = "proto3";

package products;

service ProductsService {
    rpc GetProductsByIds(GetProductsByIdsInput) returns (GetProductsByIdsOutput) {}
    rpc OrderProducts(OrderProductsInput) returns (OrderProductsOutput) {}
}

message Product {
    string id = 1;
    string name = 4;
    int32 stock = 2;
    double price = 3;
}

message GetProductsByIdsInput {
    repeated string ids = 1;
}

message GetProductsByIdsOutput {
    repeated Product products = 1;
}

message OrderProductRequest {
  string id = 1;
  int32 amount = 2; 
}

message OrderProductsInput {
  repeated OrderProductRequest products = 1;
}

message OrderProductsOutput {
  repeated Product products = 1;
}